<resources>
    <string name="app_name">BrERP WSC</string>
    <string name="logo">Logo</string>
    <string name="query">BUSCAR</string>
    <string name="name">Nome</string>
    <string name="idempiere_url">https://teste.brerp.com.br</string>
    <string name="url">Url</string>
    <string name="value">Chave de Busca</string>
    <string name="tax_id">TaxID</string>
    <string name="logo_create">Logo Create</string>
    <string name="create">Criar</string>
</resources>
